--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
         {{ site.author }}
         &nbsp;&bull;&nbsp;
       {% endif %}
-      {{ site.time | date: '%Y' }}
+      2019 - {{ site.time | date: '%Y' }}
 
       {% if site.url-pretty %}
         &nbsp;&bull;&nbsp;
@@ -37,10 +37,10 @@
        {% endif%}
 
       </p>
-      <!-- {% unless site.remove-ads %}<p class="theme-by text-muted">
+      {% unless site.remove-ads %}<p class="theme-by text-muted">
         Powered by
         <a href="https://beautifuljekyll.com">Beautiful Jekyll</a>
-      </p>{% endunless %} -->
+      </p>{% endunless %}
       </div>
     </div>
   </div>
